--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,54 @@
-/*Navbar*/
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: orange;
+/*All site*/
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5 em;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+    color : black;
   }
-  
-  nav li {
-    float: left;
+.TheForum{
+    background-color: orange;
+    color: white;
+    padding:15px;
+    text-align:center;
   }
 
-  nav li a {
-    display: block;
-    color: white;
+main{
+    display:flex;
+}
+
+
+/*Navbar*/
+.menu {
+    float: left;
+    width: 20%;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
   }
+
+  .menu a {
+    background-color: orange;
+    padding: 8px;
+    margin-top: 7px;
+    display: block;
+    width: 100%;
+    color: white;
+  }
+
+
+/*Footer*/
+.footer{
+    background-color: orange;
+    text-align: center;
+    color: white;
+}
+
+.footer a {
+    color: white;
+}
+
+/*Home*/
 
 
 /*Topics/Posts Lists*/
@@ -29,14 +60,12 @@ table, th, td {
     background-color: #f2f2f2;
 }
 
-#forum{
+#forum {
     display: flex;
-    flex-direction: column;
     align-items: center;
 }
 .topics, .posts{
     display: flex;
-    flex-direction: column;
     padding-bottom: 20px;
     width: 75%;
     font-size: 1.2em;
@@ -85,6 +114,49 @@ input[type=text], textarea {
 
 
 
-
-
 /*User Profile*/
+.userMain {
+    float: left;
+    width: 100%;
+    padding: 0 20px;
+  }
+
+.userMain table{
+    width: 100%;
+}
+
+.userMain th{
+    width: 33%;
+}
+.userMain p{
+    text-align: center;
+    text-transform: capitalize;
+    text-decoration: underline;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.userRight {
+    background-color: orange;
+    color: white;
+    float: left;
+    width: 20%;
+    padding: 15px;
+    margin-top: 7px;
+    text-align: center;
+  }
+
+  .userRight a {
+    color: white;    
+  }
+
+
+
+/*media queries*/
+@media only screen and (max-width: 620px) {
+    /* For mobile phones: */
+    main{flex-direction: column;}
+    .menu, .main, .right {
+      width: 100%;
+    }
+}
