--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,7 +197,28 @@ input[type=submit]:hover {
     text-align: center;
     border: 1px solid orange;
 }
-  
+
+/*PostsList*/
+.postsMain {
+    float: left;
+    width: 100%;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.postsMain table{
+    width: 100%;
+}
+
+.postsRight {
+    float: left;
+    width: 33%;
+    padding: 15px;
+    margin-top: 7px;
+    text-align: center;
+    border: 1px solid orange;
+}
+
 
 /*media queries*/
 @media only screen and (max-width: 640px) {
